# mjpeg-avi

./: .clang-format  .gitignore  CMakeLists.txt  README.md  REC800x600T300N7.avi  TestAvi.avi  Video.avi  avi.c  avi.h  avimake  create-avi.sh  makefile  meson.build  readme.ms  requirements.txt
src/: avi.c  avi.h  main.c
